# govuk-chat-evaluation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: action-lint.yaml  ci.yaml
config/: README.md
config/defaults/: jailbreak_guardrails.yaml  output_guardrails.yaml  question_router.yaml  rag_answers.yaml  retrieval.yaml  topic_tagger.yaml
data/: README.md
govuk_chat_evaluation/: aws_credentials.py  cli.py  config.py  dataset_generation.py
govuk_chat_evaluation/jailbreak_guardrails/: cli.py  evaluate.py  generate.py
govuk_chat_evaluation/output_guardrails/: cli.py  evaluate.py  generate.py
govuk_chat_evaluation/question_router/: cli.py  evaluate.py  generate.py
govuk_chat_evaluation/rag_answers/: bedrock_retry.py  cli.py  data_models.py  deepeval_evaluate.py  evaluate.py  generate.py  handle_model_id_collisions.py  invalid_json_retry.py  patch_bedrock_a_generate.py  shared_data_models.py
govuk_chat_evaluation/rag_answers/custom_deepeval/metrics/: __init__.py
govuk_chat_evaluation/rag_answers/custom_deepeval/metrics/absence_of_factual_contradictions/: __init__.py  absence_of_factual_contradictions.py  schema.py  template.py
govuk_chat_evaluation/rag_answers/custom_deepeval/metrics/coherence/: coherence.py  template.py
govuk_chat_evaluation/rag_answers/custom_deepeval/metrics/context_relevancy/: context_relevancy.py  schema.py  template.py
govuk_chat_evaluation/rag_answers/custom_deepeval/metrics/factual_correctness/: factual_correctness.py
govuk_chat_evaluation/rag_answers/custom_deepeval/metrics/factual_correctness_completeness/: __init__.py  cache.py  factual_correctness_completeness.py
govuk_chat_evaluation/rag_answers/custom_deepeval/metrics/factual_precision_recall/: __init__.py  factual_precision_recall.py  template.py
govuk_chat_evaluation/rag_answers/data_models/: __init__.py  config.py  input.py
govuk_chat_evaluation/retrieval/: cli.py  evaluate.py  generate.py
govuk_chat_evaluation/topic_tagger/: cli.py  evaluate.py  generate.py
scripts/: export_aws_credentials.sh
tests/: conftest.py  test_aws_credentials.py  test_dataset_generation.py
tests/jailbreak_guardrails/: conftest.py  test_cli.py  test_evaluate.py  test_generate.py
tests/output_guardrails/: conftest.py  test_cli.py  test_evaluate.py  test_generate.py
tests/question_router/: conftest.py  test_cli.py  test_evaluate.py  test_generate.py
tests/rag_answers/: conftest.py  test_bedrock_retry.py  test_cli.py  test_data_models.py  test_deepeval_evaluate.py  test_evaluate.py  test_generate.py  test_handle_model_id_collisions.py  test_invalid_json_retry.py  test_patch_bedrock_a_generate.py  test_shared_data_models.py
tests/rag_answers/custom_deepeval/metrics/absence_of_factual_contradictions/: test_absence_of_factual_contradictions.py  test_absence_of_factual_contradictions_real_providers.py  test_absence_of_factual_contradictions_schema.py  test_absence_of_factual_contradictions_with_real_bedrock.py  test_absence_of_factual_contradictions_with_real_openai.py
tests/rag_answers/custom_deepeval/metrics/coherence/: test_coherence.py  test_coherence_real_providers.py  test_coherence_with_real_bedrock.py  test_coherence_with_real_openai.py  test_template.py
tests/rag_answers/custom_deepeval/metrics/context_relevancy/: test_context_relevancy.py  test_context_relevancy_real_providers.py  test_context_relevancy_with_real_bedrock.py  (+3 more)
tests/rag_answers/data_models/: test_config.py  test_input.py
tests/retrieval/: conftest.py  test_cli.py  test_evaluate.py  test_generate.py
tests/topic_tagger/: conftest.py  test_cli.py  test_evaluate.py  test_generate.py
(+7 files in other folders)
