[project]
name = "govuk-chat-evaluation-prototype"
version = "0.1.0"
description = "Evaluation tool for GOV.UK Chat"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore>=3.8.0",
    "botocore>=1.40.18",
    "click>=8.3.3",
    "deepeval>=4.1.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tqdm>=4.69.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-freezer>=0.4.9",
    "pytest-mock>=3.14.0",
    "ruff>=0.15.22",
    "typeguard>=4.5.2",
]


[tool.uv]
package = true

[project.scripts]
govuk_chat_evaluation = "govuk_chat_evaluation.cli:main"

# Pyright LSP pick up uv venv directory
[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.setuptools]
packages = ["govuk_chat_evaluation"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
  "real_bedrock: run the tests that test against a real AWS Bedrock API"
]
addopts = "-m 'not real_bedrock'"
